# gnosys-strata

./: .gitignore  README.md  pyproject.toml
src/strata/: config.py  mcp_client_manager.py  server.py  tools.py  treeshell_functions.py
src/strata/mcp_proxy/: client.py
src/strata/utils/: catalog.py
